prog1/Parse/IMPParser.java
// Generated from IMP.g4 by ANTLR 4.13.2

    package Parse;
    import Tree.*;
    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class IMPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, IDENT=37, INT=38, WS=39;
	public static final int
		RULE_program = 0, RULE_statementlist = 1, RULE_statement = 2, RULE_assertion = 3, 
		RULE_boolexp = 4, RULE_boolterm = 5, RULE_boolterm2 = 6, RULE_boolfactor = 7, 
		RULE_compexp = 8, RULE_arithexp = 9, RULE_arithterm = 10, RULE_arithfactor = 11, 
		RULE_arithexplist = 12, RULE_id = 13, RULE_integer = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statementlist", "statement", "assertion", "boolexp", "boolterm", 
			"boolterm2", "boolfactor", "compexp", "arithexp", "arithterm", "arithfactor", 
			"arithexplist", "id", "integer"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'skip'", "':='", "'begin'", "'end'", "'if'", "'then'", 
			"'else'", "'while'", "'do'", "'assert'", "'{'", "'}'", "'=>'", "'<=>'", 
			"'or'", "'and'", "'true'", "'false'", "'forall'", "'.'", "'exists'", 
			"'not'", "'('", "')'", "'<'", "'<='", "'='", "'!='", "'>='", "'>'", "'+'", 
			"'-'", "'*'", "'/'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "IDENT", "INT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IMP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IMPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public AssertionContext pre;
		public StatementlistContext statementlist;
		public AssertionContext post;
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public List<AssertionContext> assertion() {
			return getRuleContexts(AssertionContext.class);
		}
		public AssertionContext assertion(int i) {
			return getRuleContext(AssertionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			((ProgramContext)_localctx).pre = assertion();
			setState(31);
			((ProgramContext)_localctx).statementlist = statementlist();
			setState(32);
			((ProgramContext)_localctx).post = assertion();

					    Exp wlp = ((ProgramContext)_localctx).statementlist.tree.wlp(((ProgramContext)_localctx).post.tree);
					    Exp vc = new OpExp(((ProgramContext)_localctx).pre.tree, OpExp.Op.IMP, wlp);
					    vc.print();
					    System.out.println();
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementlistContext extends ParserRuleContext {
		public Stmt tree;
		public StatementContext statement;
		public StatementContext s1;
		public StatementlistContext s2;
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public StatementlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterStatementlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitStatementlist(this);
		}
	}

	public final StatementlistContext statementlist() throws RecognitionException {
		StatementlistContext _localctx = new StatementlistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statementlist);
		try {
			setState(43);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				((StatementlistContext)_localctx).statement = statement();
				 ((StatementlistContext)_localctx).tree =  ((StatementlistContext)_localctx).statement.tree; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				((StatementlistContext)_localctx).s1 = statement();
				setState(39);
				match(T__0);
				setState(40);
				((StatementlistContext)_localctx).s2 = statementlist();
				 ((StatementlistContext)_localctx).tree =  new Seq(((StatementlistContext)_localctx).s1.tree, ((StatementlistContext)_localctx).s2.tree); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Stmt tree;
		public IdContext id;
		public ArithexpContext arithexp;
		public StatementlistContext statementlist;
		public BooltermContext boolterm;
		public StatementContext s1;
		public StatementContext s2;
		public AssertionContext assertion;
		public StatementContext statement;
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ArithexpContext arithexp() {
			return getRuleContext(ArithexpContext.class,0);
		}
		public StatementlistContext statementlist() {
			return getRuleContext(StatementlistContext.class,0);
		}
		public BooltermContext boolterm() {
			return getRuleContext(BooltermContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public AssertionContext assertion() {
			return getRuleContext(AssertionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				match(T__1);
				 ((StatementContext)_localctx).tree =  new Skip(); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				((StatementContext)_localctx).id = id();
				setState(48);
				match(T__2);
				setState(49);
				((StatementContext)_localctx).arithexp = arithexp(0);
				 ((StatementContext)_localctx).tree =  new Assign(((StatementContext)_localctx).id.name, ((StatementContext)_localctx).arithexp.tree); 
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				match(T__3);
				setState(53);
				((StatementContext)_localctx).statementlist = statementlist();
				setState(54);
				match(T__4);
				 ((StatementContext)_localctx).tree =  ((StatementContext)_localctx).statementlist.tree; 
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(57);
				match(T__5);
				setState(58);
				((StatementContext)_localctx).boolterm = boolterm(0);
				setState(59);
				match(T__6);
				setState(60);
				((StatementContext)_localctx).s1 = statement();
				setState(61);
				match(T__7);
				setState(62);
				((StatementContext)_localctx).s2 = statement();
				 ((StatementContext)_localctx).tree =  new IfThenElse(((StatementContext)_localctx).boolterm.tree, ((StatementContext)_localctx).s1.tree, ((StatementContext)_localctx).s2.tree); 
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				((StatementContext)_localctx).assertion = assertion();
				setState(66);
				match(T__8);
				setState(67);
				((StatementContext)_localctx).boolterm = boolterm(0);
				setState(68);
				match(T__9);
				setState(69);
				((StatementContext)_localctx).statement = statement();
				 ((StatementContext)_localctx).tree =  new While(((StatementContext)_localctx).assertion.tree, ((StatementContext)_localctx).boolterm.tree, ((StatementContext)_localctx).statement.tree); 
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				match(T__10);
				setState(73);
				((StatementContext)_localctx).assertion = assertion();
				 ((StatementContext)_localctx).tree =  new AssertStmt(((StatementContext)_localctx).assertion.tree); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssertionContext extends ParserRuleContext {
		public Exp tree;
		public BoolexpContext t;
		public BoolexpContext boolexp() {
			return getRuleContext(BoolexpContext.class,0);
		}
		public AssertionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assertion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterAssertion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitAssertion(this);
		}
	}

	public final AssertionContext assertion() throws RecognitionException {
		AssertionContext _localctx = new AssertionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assertion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__11);
			setState(79);
			((AssertionContext)_localctx).t = boolexp();
			setState(80);
			match(T__12);
			 ((AssertionContext)_localctx).tree =  ((AssertionContext)_localctx).t.tree; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolexpContext extends ParserRuleContext {
		public Exp tree;
		public BooltermContext t;
		public BooltermContext t1;
		public BooltermContext t2;
		public List<BooltermContext> boolterm() {
			return getRuleContexts(BooltermContext.class);
		}
		public BooltermContext boolterm(int i) {
			return getRuleContext(BooltermContext.class,i);
		}
		public BoolexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterBoolexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitBoolexp(this);
		}
	}

	public final BoolexpContext boolexp() throws RecognitionException {
		BoolexpContext _localctx = new BoolexpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolexp);
		try {
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				((BoolexpContext)_localctx).t = boolterm(0);
				 ((BoolexpContext)_localctx).tree =  ((BoolexpContext)_localctx).t.tree; 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((BoolexpContext)_localctx).t1 = boolterm(0);
				setState(87);
				match(T__13);
				setState(88);
				((BoolexpContext)_localctx).t2 = boolterm(0);
				 ((BoolexpContext)_localctx).tree =  new OpExp(((BoolexpContext)_localctx).t1.tree, OpExp.Op.IMP, ((BoolexpContext)_localctx).t2.tree); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				((BoolexpContext)_localctx).t1 = boolterm(0);
				setState(92);
				match(T__14);
				setState(93);
				((BoolexpContext)_localctx).t2 = boolterm(0);
				 ((BoolexpContext)_localctx).tree =  new OpExp(((BoolexpContext)_localctx).t1.tree, OpExp.Op.EQV, ((BoolexpContext)_localctx).t2.tree); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BooltermContext extends ParserRuleContext {
		public Exp tree;
		public BooltermContext t1;
		public Boolterm2Context t;
		public Boolterm2Context t2;
		public Boolterm2Context boolterm2() {
			return getRuleContext(Boolterm2Context.class,0);
		}
		public BooltermContext boolterm() {
			return getRuleContext(BooltermContext.class,0);
		}
		public BooltermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolterm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterBoolterm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitBoolterm(this);
		}
	}

	public final BooltermContext boolterm() throws RecognitionException {
		return boolterm(0);
	}

	private BooltermContext boolterm(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BooltermContext _localctx = new BooltermContext(_ctx, _parentState);
		BooltermContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_boolterm, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(99);
			((BooltermContext)_localctx).t = boolterm2(0);
			 ((BooltermContext)_localctx).tree =  ((BooltermContext)_localctx).t.tree; 
			}
			_ctx.stop = _input.LT(-1);
			setState(109);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BooltermContext(_parentctx, _parentState);
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_boolterm);
					setState(102);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(103);
					match(T__15);
					setState(104);
					((BooltermContext)_localctx).t2 = boolterm2(0);
					 ((BooltermContext)_localctx).tree =  new OpExp(((BooltermContext)_localctx).t1.tree, OpExp.Op.OR, ((BooltermContext)_localctx).t2.tree); 
					}
					} 
				}
				setState(111);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Boolterm2Context extends ParserRuleContext {
		public Exp tree;
		public Boolterm2Context t1;
		public BoolfactorContext t;
		public BoolfactorContext t2;
		public BoolfactorContext boolfactor() {
			return getRuleContext(BoolfactorContext.class,0);
		}
		public Boolterm2Context boolterm2() {
			return getRuleContext(Boolterm2Context.class,0);
		}
		public Boolterm2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolterm2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterBoolterm2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitBoolterm2(this);
		}
	}

	public final Boolterm2Context boolterm2() throws RecognitionException {
		return boolterm2(0);
	}

	private Boolterm2Context boolterm2(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Boolterm2Context _localctx = new Boolterm2Context(_ctx, _parentState);
		Boolterm2Context _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_boolterm2, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(113);
			((Boolterm2Context)_localctx).t = boolfactor();
			 ((Boolterm2Context)_localctx).tree =  ((Boolterm2Context)_localctx).t.tree; 
			}
			_ctx.stop = _input.LT(-1);
			setState(123);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Boolterm2Context(_parentctx, _parentState);
					_localctx.t1 = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_boolterm2);
					setState(116);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(117);
					match(T__16);
					setState(118);
					((Boolterm2Context)_localctx).t2 = boolfactor();
					 ((Boolterm2Context)_localctx).tree =  new OpExp(((Boolterm2Context)_localctx).t1.tree, OpExp.Op.AND, ((Boolterm2Context)_localctx).t2.tree); 
					}
					} 
				}
				setState(125);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BoolfactorContext extends ParserRuleContext {
		public Exp tree;
		public CompexpContext compexp;
		public IdContext id;
		public BoolexpContext boolexp;
		public BoolfactorContext boolfactor;
		public BoolexpContext t;
		public CompexpContext compexp() {
			return getRuleContext(CompexpContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public BoolexpContext boolexp() {
			return getRuleContext(BoolexpContext.class,0);
		}
		public BoolfactorContext boolfactor() {
			return getRuleContext(BoolfactorContext.class,0);
		}
		public BoolfactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolfactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterBoolfactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitBoolfactor(this);
		}
	}

	public final BoolfactorContext boolfactor() throws RecognitionException {
		BoolfactorContext _localctx = new BoolfactorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_boolfactor);
		try {
			setState(154);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(T__17);
				 ((BoolfactorContext)_localctx).tree =  new BoolLit(true); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(T__18);
				 ((BoolfactorContext)_localctx).tree =  new BoolLit(false); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				((BoolfactorContext)_localctx).compexp = compexp();
				 ((BoolfactorContext)_localctx).tree =  ((BoolfactorContext)_localctx).compexp.tree; 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				match(T__19);
				setState(134);
				((BoolfactorContext)_localctx).id = id();
				setState(135);
				match(T__20);
				setState(136);
				((BoolfactorContext)_localctx).boolexp = boolexp();
				 ((BoolfactorContext)_localctx).tree =  new ForAll(((BoolfactorContext)_localctx).id.name.getName(), ((BoolfactorContext)_localctx).boolexp.tree); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(139);
				match(T__21);
				setState(140);
				((BoolfactorContext)_localctx).id = id();
				setState(141);
				match(T__20);
				setState(142);
				((BoolfactorContext)_localctx).boolexp = boolexp();
				 ((BoolfactorContext)_localctx).tree =  new Exists(((BoolfactorContext)_localctx).id.name.getName(), ((BoolfactorContext)_localctx).boolexp.tree); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(145);
				match(T__22);
				setState(146);
				((BoolfactorContext)_localctx).boolfactor = boolfactor();
				 ((BoolfactorContext)_localctx).tree =  new OpExp(OpExp.Op.NOT, ((BoolfactorContext)_localctx).boolfactor.tree); 
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(149);
				match(T__23);
				setState(150);
				((BoolfactorContext)_localctx).t = boolexp();
				setState(151);
				match(T__24);
				 ((BoolfactorContext)_localctx).tree =  ((BoolfactorContext)_localctx).t.tree; 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompexpContext extends ParserRuleContext {
		public Exp tree;
		public ArithexpContext t1;
		public ArithexpContext t2;
		public List<ArithexpContext> arithexp() {
			return getRuleContexts(ArithexpContext.class);
		}
		public ArithexpContext arithexp(int i) {
			return getRuleContext(ArithexpContext.class,i);
		}
		public CompexpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compexp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).enterCompexp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IMPListener ) ((IMPListener)listener).exitCompexp(this);
		}
	}
